lib/src/compiler/tests/testdata/errors/23.out
error[E104]: unexpected negative number
 --> line:6:11
  |
6 |     $a at -1
  |           ^^ this number can not be negative
  |